<resources>
    <string name="app_name">Popular Movies</string>
    <string name="show_top_rated">Show Top Rated</string>
    <string name="show_popular">Show Popular</string>
    <string name="show_favorites">Show Favorites</string>
    <string name="cannot_connect_server">Oops, Sorry! We can\'t connect to server right now</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="release_on">Release on :</string>
    <string name="rating">Rating :</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in nibh eros. Praesent bibendum pellentesque vehicula. Nunc dui erat, vehicula vel ex id, consectetur malesuada enim. Suspendisse non purus eget est sagittis condimentum. Nam gravida est sed felis tincidunt malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sollicitudin purus ac lacus lacinia aliquet.</string>
    <string name="review">Review</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="show_more">Show More</string>
    <string name="favorites_is_empty">Favorites list is empty</string>
    <string name="youtube_link" translatable="false">https://www.youtube.com/watch?v=</string>
    <string name="review_list_extra">ReviewListExtra</string>
    <string name="trailer_list_extra">TrailerListExtra</string>
    <string name="movie_trailer">Movie Trailer</string>
</resources>
