<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bimosigit.popularmovies.detail.DetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pb_loading_detail_indicator"
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_poster"
                    android:scaleType="fitCenter"
                    tools:layout_height="240dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_medium">

                    <TextView
                        android:id="@+id/tv_original_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_sz_large"
                        android:textStyle="bold"
                        tools:text="Title goes here" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Rating 8/10" />

                    <TextView
                        android:id="@+id/tv_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/release_on" />

                    <ToggleButton
                        android:id="@+id/tb_detail_favorite"
                        style="@style/toggleButton"
                        android:layout_width="@dimen/icon_large"
                        android:layout_height="@dimen/icon_large"
                        android:background="@drawable/ic_toggle_bg"
                        tools:checked="true" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/overview"
                android:textSize="@dimen/text_sz_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                tools:text="@string/lorem_ipsum" />

            <TextView

                android:id="@+id/tv_detail_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/trailer"
                android:textSize="@dimen/text_sz_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium">

                <ImageView
                    android:id="@+id/iv_detail_a_trailer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/trailer" />

                <ImageView
                    android:id="@+id/iv_detail_b_trailer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/trailer" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_detail_show_more_trailer"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_more"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_detail_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/review"
                android:textSize="@dimen/text_sz_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_detail_review_author_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_review_content_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium" />

            <TextView
                android:id="@+id/tv_detail_review_author_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_review_content_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium" />

            <Button
                android:id="@+id/btn_detail_show_more_review"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_more"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>
</ScrollView>
